[gd_scene load_steps=8 format=3 uid="uid://crwoi120lyg6h"]

[ext_resource type="PackedScene" uid="uid://82aeqqi2rddp" path="res://ui/ui.tscn" id="1_swaw2"]
[ext_resource type="TileSet" uid="uid://c537katjoknov" path="res://world/level_tileset.tres" id="1_x7fib"]
[ext_resource type="PackedScene" uid="uid://31y11begqd5e" path="res://actors/door.tscn" id="2_cgdok"]
[ext_resource type="Script" path="res://actors/player_spawner.gd" id="4_3al1s"]
[ext_resource type="Script" path="res://actors/respawn.gd" id="4_s8qrv"]
[ext_resource type="PackedScene" uid="uid://dlw6umpweb060" path="res://actors/key.tscn" id="6_mj6gc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yue0q"]
size = Vector2(144, 173)

[node name="MainLevel" type="Node2D"]

[node name="UI" parent="." instance=ExtResource("1_swaw2")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_x7fib")
format = 2
layer_0/name = "PlayWorld"
layer_0/tile_data = PackedInt32Array(131074, 458753, 1, 196610, 196609, 2, 262146, 196609, 2, 327682, 196609, 2, 393218, 196609, 2, 458754, 196609, 2, 524290, 196609, 2, 589826, 196609, 2, 655362, 196609, 2, 720898, 196609, 2, 786434, 196609, 2, 131089, 524289, 1, 196625, 65537, 2, 262161, 65537, 2, 327697, 65537, 2, 393233, 65537, 2, 458769, 65537, 2, 524305, 65537, 2, 589841, 65537, 2, 655377, 65537, 2, 720913, 65537, 2, 786449, 65537, 2, 851970, 458753, 2, 131075, 131073, 3, 851971, 131073, 1, 131076, 131073, 3, 851972, 131073, 1, 131077, 131073, 3, 851973, 131073, 1, 131078, 131073, 3, 851974, 131073, 1, 131079, 131073, 3, 851975, 131073, 1, 131080, 131073, 3, 851976, 131073, 1, 131081, 131073, 3, 851977, 196609, 1, 131082, 131073, 3, 131083, 131073, 3, 131084, 131073, 3, 131085, 131073, 3, 851981, 65537, 1, 131086, 131073, 3, 851982, 131073, 1, 131087, 131073, 3, 851983, 131073, 1, 131088, 131073, 3, 851984, 131073, 1, 851985, 524289, 2, 917513, 196609, 2, 917517, 65537, 2, 1310729, 196609, 2, 1376265, 196609, 2, 1376266, 131073, 8, 1376267, 131073, 8, 1376268, 131073, 8, 1310733, 65537, 2, 1376269, 65537, 2, 1245197, 65537, 2, 1179661, 65537, 2, 1114125, 65537, 2, 1048589, 65537, 2, 983053, 65537, 2, 1245193, 196609, 2, 1179657, 196609, 2, 1114121, 196609, 2, 1048585, 196609, 2, 983049, 196609, 2, 786448, 131073, 8, 720912, 131073, 8, 655376, 131073, 8, 589840, 131073, 8, 524304, 131073, 8, 458768, 131073, 8, 393232, 131073, 8, 327696, 131073, 8, 262160, 131073, 8, 196624, 131073, 8, 786447, 131073, 8, 720911, 131073, 8, 655375, 131073, 8, 589839, 131073, 8, 524303, 131073, 8, 458767, 131073, 8, 393231, 131073, 8, 327695, 131073, 8, 262159, 131073, 8, 196623, 131073, 8, 786446, 131073, 8, 720910, 131073, 8, 655374, 131073, 8, 589838, 131073, 8, 524302, 131073, 8, 458766, 131073, 8, 393230, 131073, 8, 327694, 131073, 8, 262158, 131073, 8, 196622, 131073, 8, 786445, 131073, 8, 720909, 131073, 8, 655373, 131073, 8, 589837, 131073, 8, 524301, 131073, 8, 458765, 131073, 8, 393229, 131073, 8, 327693, 131073, 8, 262157, 131073, 8, 196621, 131073, 8, 786444, 131073, 8, 720908, 131073, 8, 655372, 131073, 8, 589836, 131073, 8, 524300, 131073, 8, 458764, 131073, 8, 393228, 131073, 8, 327692, 131073, 8, 262156, 131073, 8, 196620, 131073, 8, 786443, 131073, 8, 720907, 131073, 8, 655371, 131073, 8, 589835, 131073, 8, 524299, 131073, 8, 458763, 131073, 8, 393227, 131073, 8, 327691, 131073, 8, 262155, 131073, 8, 196619, 131073, 8, 786442, 131073, 8, 720906, 131073, 8, 655370, 131073, 8, 589834, 131073, 8, 524298, 131073, 8, 458762, 131073, 8, 393226, 131073, 8, 327690, 131073, 8, 262154, 131073, 8, 196618, 131073, 8, 786441, 131073, 8, 720905, 131073, 8, 655369, 131073, 8, 589833, 131073, 8, 524297, 131073, 8, 458761, 131073, 8, 393225, 131073, 8, 327689, 131073, 8, 262153, 131073, 8, 196617, 131073, 8, 786440, 131073, 8, 720904, 131073, 8, 655368, 131073, 8, 589832, 131073, 8, 524296, 131073, 8, 458760, 131073, 8, 393224, 131073, 8, 327688, 131073, 8, 262152, 131073, 8, 196616, 131073, 8, 786439, 131073, 8, 720903, 131073, 8, 655367, 131073, 8, 589831, 131073, 8, 524295, 131073, 8, 458759, 131073, 8, 393223, 131073, 8, 327687, 131073, 8, 262151, 131073, 8, 196615, 131073, 8, 786438, 131073, 8, 720902, 131073, 8, 655366, 131073, 8, 589830, 131073, 8, 524294, 131073, 8, 458758, 131073, 8, 393222, 131073, 8, 327686, 131073, 8, 262150, 131073, 8, 196614, 131073, 8, 786437, 131073, 8, 720901, 131073, 8, 655365, 131073, 8, 589829, 131073, 8, 524293, 131073, 8, 458757, 131073, 8, 393221, 131073, 8, 327685, 131073, 8, 262149, 131073, 8, 196613, 131073, 8, 786436, 131073, 8, 720900, 131073, 8, 655364, 131073, 8, 589828, 131073, 8, 524292, 131073, 8, 458756, 131073, 8, 393220, 131073, 8, 327684, 131073, 8, 262148, 131073, 8, 196612, 131073, 8, 786435, 131073, 8, 720899, 131073, 8, 655363, 131073, 8, 589827, 131073, 8, 524291, 131073, 8, 458755, 131073, 8, 393219, 131073, 8, 327683, 131073, 8, 262147, 131073, 8, 196611, 131073, 8, 1310732, 131073, 8, 1245196, 131073, 8, 1179660, 131073, 8, 1114124, 131073, 8, 1048588, 131073, 8, 983052, 131073, 8, 917516, 131073, 8, 851980, 131073, 8, 1310731, 131073, 8, 1245195, 131073, 8, 1179659, 131073, 8, 1114123, 131073, 8, 1048587, 131073, 8, 983051, 131073, 8, 917515, 131073, 8, 851979, 131073, 8, 1310730, 131073, 8, 1245194, 131073, 8, 1179658, 131073, 8, 1114122, 131073, 8, 1048586, 131073, 8, 983050, 131073, 8, 917514, 131073, 8, 851978, 131073, 8, 1572876, 131073, 8, 1507340, 131073, 8, 1441804, 131073, 8, 1572875, 131073, 8, 1507339, 131073, 8, 1441803, 131073, 8, 1572874, 131073, 8, 1507338, 131073, 8, 1441802, 131073, 8, 1638413, 524289, 2, 1572877, 65537, 2, 1507341, 65537, 2, 1441805, 65537, 2, 1638412, 131073, 1, 1638411, 131073, 1, 1638410, 131073, 1, 1638409, 458753, 2, 1572873, 196609, 2, 1507337, 196609, 2, 1441801, 196609, 2, 1638408, 131073, 2, 1572872, 131073, 2, 1507336, 131073, 2, 1441800, 131073, 2, 1376264, 131073, 2, 1310728, 131073, 2, 1245192, 131073, 2, 1179656, 131073, 2, 1114120, 131073, 2, 1048584, 131073, 2, 983048, 131073, 2, 917512, 131073, 2, 1638407, 131073, 2, 1572871, 131073, 2, 1507335, 131073, 2, 1441799, 131073, 2, 1376263, 131073, 2, 1310727, 131073, 2, 1245191, 131073, 2, 1179655, 131073, 2, 1114119, 131073, 2, 1048583, 131073, 2, 983047, 131073, 2, 917511, 131073, 2, 1638406, 131073, 2, 1572870, 131073, 2, 1507334, 131073, 2, 1441798, 131073, 2, 1376262, 131073, 2, 1310726, 131073, 2, 1245190, 131073, 2, 1179654, 131073, 2, 1114118, 131073, 2, 1048582, 131073, 2, 983046, 131073, 2, 917510, 131073, 2, 1638405, 131073, 2, 1572869, 131073, 2, 1507333, 131073, 2, 1441797, 131073, 2, 1376261, 131073, 2, 1310725, 131073, 2, 1245189, 131073, 2, 1179653, 131073, 2, 1114117, 131073, 2, 1048581, 131073, 2, 983045, 131073, 2, 917509, 131073, 2, 1638404, 131073, 2, 1572868, 131073, 2, 1507332, 131073, 2, 1441796, 131073, 2, 1376260, 131073, 2, 1310724, 131073, 2, 1245188, 131073, 2, 1179652, 131073, 2, 1114116, 131073, 2, 1048580, 131073, 2, 983044, 131073, 2, 917508, 131073, 2, 1638403, 131073, 2, 1572867, 131073, 2, 1507331, 131073, 2, 1441795, 131073, 2, 1376259, 131073, 2, 1310723, 131073, 2, 1245187, 131073, 2, 1179651, 131073, 2, 1114115, 131073, 2, 1048579, 131073, 2, 983043, 131073, 2, 917507, 131073, 2, 1638402, 131073, 2, 1572866, 131073, 2, 1507330, 131073, 2, 1441794, 131073, 2, 1376258, 131073, 2, 1310722, 131073, 2, 1245186, 131073, 2, 1179650, 131073, 2, 1114114, 131073, 2, 1048578, 131073, 2, 983042, 131073, 2, 917506, 131073, 2, 1638401, 131073, 2, 1572865, 131073, 2, 1507329, 131073, 2, 1441793, 131073, 2, 1376257, 131073, 2, 1310721, 131073, 2, 1245185, 131073, 2, 1179649, 131073, 2, 1114113, 131073, 2, 1048577, 131073, 2, 983041, 131073, 2, 917505, 131073, 2, 1638400, 131073, 2, 1572864, 131073, 2, 1507328, 131073, 2, 1441792, 131073, 2, 1376256, 131073, 2, 1310720, 131073, 2, 1245184, 131073, 2, 1179648, 131073, 2, 1114112, 131073, 2, 1048576, 131073, 2, 983040, 131073, 2, 917504, 131073, 2, 1703935, 131073, 2, 1638399, 131073, 2, 1572863, 131073, 2, 1507327, 131073, 2, 1441791, 131073, 2, 1376255, 131073, 2, 1310719, 131073, 2, 1245183, 131073, 2, 1179647, 131073, 2, 1114111, 131073, 2, 1048575, 131073, 2, 983039, 131073, 2, 1638437, 131073, 2, 1572901, 131073, 2, 1507365, 131073, 2, 1441829, 131073, 2, 1376293, 131073, 2, 1310757, 131073, 2, 1245221, 131073, 2, 1179685, 131073, 2, 1114149, 131073, 2, 1048613, 131073, 2, 983077, 131073, 2, 917541, 131073, 2, 1638436, 131073, 2, 1572900, 131073, 2, 1507364, 131073, 2, 1441828, 131073, 2, 1376292, 131073, 2, 1310756, 131073, 2, 1245220, 131073, 2, 1179684, 131073, 2, 1114148, 131073, 2, 1048612, 131073, 2, 983076, 131073, 2, 917540, 131073, 2, 1638435, 131073, 2, 1572899, 131073, 2, 1507363, 131073, 2, 1441827, 131073, 2, 1376291, 131073, 2, 1310755, 131073, 2, 1245219, 131073, 2, 1179683, 131073, 2, 1114147, 131073, 2, 1048611, 131073, 2, 983075, 131073, 2, 917539, 131073, 2, 1638434, 131073, 2, 1572898, 131073, 2, 1507362, 131073, 2, 1441826, 131073, 2, 1376290, 131073, 2, 1310754, 131073, 2, 1245218, 131073, 2, 1179682, 131073, 2, 1114146, 131073, 2, 1048610, 131073, 2, 983074, 131073, 2, 917538, 131073, 2, 1638433, 131073, 2, 1572897, 131073, 2, 1507361, 131073, 2, 1441825, 131073, 2, 1376289, 131073, 2, 1310753, 131073, 2, 1245217, 131073, 2, 1179681, 131073, 2, 1114145, 131073, 2, 1048609, 131073, 2, 983073, 131073, 2, 917537, 131073, 2, 1638432, 131073, 2, 1572896, 131073, 2, 1507360, 131073, 2, 1441824, 131073, 2, 1376288, 131073, 2, 1310752, 131073, 2, 1245216, 131073, 2, 1179680, 131073, 2, 1114144, 131073, 2, 1048608, 131073, 2, 983072, 131073, 2, 917536, 131073, 2, 1638431, 131073, 2, 1572895, 131073, 2, 1507359, 131073, 2, 1441823, 131073, 2, 1376287, 131073, 2, 1310751, 131073, 2, 1245215, 131073, 2, 1179679, 131073, 2, 1114143, 131073, 2, 1048607, 131073, 2, 983071, 131073, 2, 917535, 131073, 2, 1638430, 131073, 2, 1572894, 131073, 2, 1507358, 131073, 2, 1441822, 131073, 2, 1376286, 131073, 2, 1310750, 131073, 2, 1245214, 131073, 2, 1179678, 131073, 2, 1114142, 131073, 2, 1048606, 131073, 2, 983070, 131073, 2, 917534, 131073, 2, 1638429, 131073, 2, 1572893, 131073, 2, 1507357, 131073, 2, 1441821, 131073, 2, 1376285, 131073, 2, 1310749, 131073, 2, 1245213, 131073, 2, 1179677, 131073, 2, 1114141, 131073, 2, 1048605, 131073, 2, 983069, 131073, 2, 917533, 131073, 2, 1638428, 131073, 2, 1572892, 131073, 2, 1507356, 131073, 2, 1441820, 131073, 2, 1376284, 131073, 2, 1310748, 131073, 2, 1245212, 131073, 2, 1179676, 131073, 2, 1114140, 131073, 2, 1048604, 131073, 2, 983068, 131073, 2, 917532, 131073, 2, 1638427, 131073, 2, 1572891, 131073, 2, 1507355, 131073, 2, 1441819, 131073, 2, 1376283, 131073, 2, 1310747, 131073, 2, 1245211, 131073, 2, 1179675, 131073, 2, 1114139, 131073, 2, 1048603, 131073, 2, 983067, 131073, 2, 917531, 131073, 2, 1638426, 131073, 2, 1572890, 131073, 2, 1507354, 131073, 2, 1441818, 131073, 2, 1376282, 131073, 2, 1310746, 131073, 2, 1245210, 131073, 2, 1179674, 131073, 2, 1114138, 131073, 2, 1048602, 131073, 2, 983066, 131073, 2, 917530, 131073, 2, 1638425, 131073, 2, 1572889, 131073, 2, 1507353, 131073, 2, 1441817, 131073, 2, 1376281, 131073, 2, 1310745, 131073, 2, 1245209, 131073, 2, 1179673, 131073, 2, 1114137, 131073, 2, 1048601, 131073, 2, 983065, 131073, 2, 917529, 131073, 2, 1638424, 131073, 2, 1572888, 131073, 2, 1507352, 131073, 2, 1441816, 131073, 2, 1376280, 131073, 2, 1310744, 131073, 2, 1245208, 131073, 2, 1179672, 131073, 2, 1114136, 131073, 2, 1048600, 131073, 2, 983064, 131073, 2, 917528, 131073, 2, 1638423, 131073, 2, 1572887, 131073, 2, 1507351, 131073, 2, 1441815, 131073, 2, 1376279, 131073, 2, 1310743, 131073, 2, 1245207, 131073, 2, 1179671, 131073, 2, 1114135, 131073, 2, 1048599, 131073, 2, 983063, 131073, 2, 917527, 131073, 2, 1638422, 131073, 2, 1572886, 131073, 2, 1507350, 131073, 2, 1441814, 131073, 2, 1376278, 131073, 2, 1310742, 131073, 2, 1245206, 131073, 2, 1179670, 131073, 2, 1114134, 131073, 2, 1048598, 131073, 2, 983062, 131073, 2, 917526, 131073, 2, 1638421, 131073, 2, 1572885, 131073, 2, 1507349, 131073, 2, 1441813, 131073, 2, 1376277, 131073, 2, 1310741, 131073, 2, 1245205, 131073, 2, 1179669, 131073, 2, 1114133, 131073, 2, 1048597, 131073, 2, 983061, 131073, 2, 917525, 131073, 2, 1638420, 131073, 2, 1572884, 131073, 2, 1507348, 131073, 2, 1441812, 131073, 2, 1376276, 131073, 2, 1310740, 131073, 2, 1245204, 131073, 2, 1179668, 131073, 2, 1114132, 131073, 2, 1048596, 131073, 2, 983060, 131073, 2, 917524, 131073, 2, 1638419, 131073, 2, 1572883, 131073, 2, 1507347, 131073, 2, 1441811, 131073, 2, 1376275, 131073, 2, 1310739, 131073, 2, 1245203, 131073, 2, 1179667, 131073, 2, 1114131, 131073, 2, 1048595, 131073, 2, 983059, 131073, 2, 917523, 131073, 2, 1638418, 131073, 2, 1572882, 131073, 2, 1507346, 131073, 2, 1441810, 131073, 2, 1376274, 131073, 2, 1310738, 131073, 2, 1245202, 131073, 2, 1179666, 131073, 2, 1114130, 131073, 2, 1048594, 131073, 2, 983058, 131073, 2, 917522, 131073, 2, 1638417, 131073, 2, 1572881, 131073, 2, 1507345, 131073, 2, 1441809, 131073, 2, 1376273, 131073, 2, 1310737, 131073, 2, 1245201, 131073, 2, 1179665, 131073, 2, 1114129, 131073, 2, 1048593, 131073, 2, 983057, 131073, 2, 917521, 131073, 2, 1638416, 131073, 2, 1572880, 131073, 2, 1507344, 131073, 2, 1441808, 131073, 2, 1376272, 131073, 2, 1310736, 131073, 2, 1245200, 131073, 2, 1179664, 131073, 2, 1114128, 131073, 2, 1048592, 131073, 2, 983056, 131073, 2, 917520, 131073, 2, 1638415, 131073, 2, 1572879, 131073, 2, 1507343, 131073, 2, 1441807, 131073, 2, 1376271, 131073, 2, 1310735, 131073, 2, 1245199, 131073, 2, 1179663, 131073, 2, 1114127, 131073, 2, 1048591, 131073, 2, 983055, 131073, 2, 917519, 131073, 2, 1638414, 131073, 2, 1572878, 131073, 2, 1507342, 131073, 2, 1441806, 131073, 2, 1376270, 131073, 2, 1310734, 131073, 2, 1245198, 131073, 2, 1179662, 131073, 2, 1114126, 131073, 2, 1048590, 131073, 2, 983054, 131073, 2, 917518, 131073, 2, 852005, 131073, 2, 786469, 131073, 2, 720933, 131073, 2, 655397, 131073, 2, 589861, 131073, 2, 524325, 131073, 2, 458789, 131073, 2, 393253, 131073, 2, 327717, 131073, 2, 262181, 131073, 2, 196645, 131073, 2, 131109, 131073, 2, 65573, 131073, 2, 852004, 131073, 2, 786468, 131073, 2, 720932, 131073, 2, 655396, 131073, 2, 589860, 131073, 2, 524324, 131073, 2, 458788, 131073, 2, 393252, 131073, 2, 327716, 131073, 2, 262180, 131073, 2, 196644, 131073, 2, 131108, 131073, 2, 65572, 131073, 2, 852003, 131073, 2, 786467, 131073, 2, 720931, 131073, 2, 655395, 131073, 2, 589859, 131073, 2, 524323, 131073, 2, 458787, 131073, 2, 393251, 131073, 2, 327715, 131073, 2, 262179, 131073, 2, 196643, 131073, 2, 131107, 131073, 2, 65571, 131073, 2, 852002, 131073, 2, 786466, 131073, 2, 720930, 131073, 2, 655394, 131073, 2, 589858, 131073, 2, 524322, 131073, 2, 458786, 131073, 2, 393250, 131073, 2, 327714, 131073, 2, 262178, 131073, 2, 196642, 131073, 2, 131106, 131073, 2, 65570, 131073, 2, 852001, 131073, 2, 786465, 131073, 2, 720929, 131073, 2, 655393, 131073, 2, 589857, 131073, 2, 524321, 131073, 2, 458785, 131073, 2, 393249, 131073, 2, 327713, 131073, 2, 262177, 131073, 2, 196641, 131073, 2, 131105, 131073, 2, 65569, 131073, 2, 852000, 131073, 2, 786464, 131073, 2, 720928, 131073, 2, 655392, 131073, 2, 589856, 131073, 2, 524320, 131073, 2, 458784, 131073, 2, 393248, 131073, 2, 327712, 131073, 2, 262176, 131073, 2, 196640, 131073, 2, 131104, 131073, 2, 65568, 131073, 2, 851999, 131073, 2, 786463, 131073, 2, 720927, 131073, 2, 655391, 131073, 2, 589855, 131073, 2, 524319, 131073, 2, 458783, 131073, 2, 393247, 131073, 2, 327711, 131073, 2, 262175, 131073, 2, 196639, 131073, 2, 131103, 131073, 2, 65567, 131073, 2, 851998, 131073, 2, 786462, 131073, 2, 720926, 131073, 2, 655390, 131073, 2, 589854, 131073, 2, 524318, 131073, 2, 458782, 131073, 2, 393246, 131073, 2, 327710, 131073, 2, 262174, 131073, 2, 196638, 131073, 2, 131102, 131073, 2, 65566, 131073, 2, 851997, 131073, 2, 786461, 131073, 2, 720925, 131073, 2, 655389, 131073, 2, 589853, 131073, 2, 524317, 131073, 2, 458781, 131073, 2, 393245, 131073, 2, 327709, 131073, 2, 262173, 131073, 2, 196637, 131073, 2, 131101, 131073, 2, 65565, 131073, 2, 851996, 131073, 2, 786460, 131073, 2, 720924, 131073, 2, 655388, 131073, 2, 589852, 131073, 2, 524316, 131073, 2, 458780, 131073, 2, 393244, 131073, 2, 327708, 131073, 2, 262172, 131073, 2, 196636, 131073, 2, 131100, 131073, 2, 65564, 131073, 2, 851995, 131073, 2, 786459, 131073, 2, 720923, 131073, 2, 655387, 131073, 2, 589851, 131073, 2, 524315, 131073, 2, 458779, 131073, 2, 393243, 131073, 2, 327707, 131073, 2, 262171, 131073, 2, 196635, 131073, 2, 131099, 131073, 2, 65563, 131073, 2, 851994, 131073, 2, 786458, 131073, 2, 720922, 131073, 2, 655386, 131073, 2, 589850, 131073, 2, 524314, 131073, 2, 458778, 131073, 2, 393242, 131073, 2, 327706, 131073, 2, 262170, 131073, 2, 196634, 131073, 2, 131098, 131073, 2, 65562, 131073, 2, 851993, 131073, 2, 786457, 131073, 2, 720921, 131073, 2, 655385, 131073, 2, 589849, 131073, 2, 524313, 131073, 2, 458777, 131073, 2, 393241, 131073, 2, 327705, 131073, 2, 262169, 131073, 2, 196633, 131073, 2, 131097, 131073, 2, 65561, 131073, 2, 851992, 131073, 2, 786456, 131073, 2, 720920, 131073, 2, 655384, 131073, 2, 589848, 131073, 2, 524312, 131073, 2, 458776, 131073, 2, 393240, 131073, 2, 327704, 131073, 2, 262168, 131073, 2, 196632, 131073, 2, 131096, 131073, 2, 65560, 131073, 2, 851991, 131073, 2, 786455, 131073, 2, 720919, 131073, 2, 655383, 131073, 2, 589847, 131073, 2, 524311, 131073, 2, 458775, 131073, 2, 393239, 131073, 2, 327703, 131073, 2, 262167, 131073, 2, 196631, 131073, 2, 131095, 131073, 2, 65559, 131073, 2, 851990, 131073, 2, 786454, 131073, 2, 720918, 131073, 2, 655382, 131073, 2, 589846, 131073, 2, 524310, 131073, 2, 458774, 131073, 2, 393238, 131073, 2, 327702, 131073, 2, 262166, 131073, 2, 196630, 131073, 2, 131094, 131073, 2, 65558, 131073, 2, 851989, 131073, 2, 786453, 131073, 2, 720917, 131073, 2, 655381, 131073, 2, 589845, 131073, 2, 524309, 131073, 2, 458773, 131073, 2, 393237, 131073, 2, 327701, 131073, 2, 262165, 131073, 2, 196629, 131073, 2, 131093, 131073, 2, 65557, 131073, 2, 851988, 131073, 2, 786452, 131073, 2, 720916, 131073, 2, 655380, 131073, 2, 589844, 131073, 2, 524308, 131073, 2, 458772, 131073, 2, 393236, 131073, 2, 327700, 131073, 2, 262164, 131073, 2, 196628, 131073, 2, 131092, 131073, 2, 65556, 131073, 2, 851987, 131073, 2, 786451, 131073, 2, 720915, 131073, 2, 655379, 131073, 2, 589843, 131073, 2, 524307, 131073, 2, 458771, 131073, 2, 393235, 131073, 2, 327699, 131073, 2, 262163, 131073, 2, 196627, 131073, 2, 131091, 131073, 2, 65555, 131073, 2, 851986, 131073, 2, 786450, 131073, 2, 720914, 131073, 2, 655378, 131073, 2, 589842, 131073, 2, 524306, 131073, 2, 458770, 131073, 2, 393234, 131073, 2, 327698, 131073, 2, 262162, 131073, 2, 196626, 131073, 2, 131090, 131073, 2, 65554, 131073, 2, 851969, 131073, 2, 786433, 131073, 2, 720897, 131073, 2, 655361, 131073, 2, 589825, 131073, 2, 524289, 131073, 2, 458753, 131073, 2, 393217, 131073, 2, 327681, 131073, 2, 262145, 131073, 2, 196609, 131073, 2, 131073, 131073, 2, 65537, 131073, 2, 1, 131073, 2, 851968, 131073, 2, 786432, 131073, 2, 720896, 131073, 2, 655360, 131073, 2, 589824, 131073, 2, 524288, 131073, 2, 458752, 131073, 2, 393216, 131073, 2, 327680, 131073, 2, 262144, 131073, 2, 196608, 131073, 2, 131072, 131073, 2, 65536, 131073, 2, 0, 131073, 2, 917503, 131073, 2, 851967, 131073, 2, 786431, 131073, 2, 720895, 131073, 2, 655359, 131073, 2, 589823, 131073, 2, 524287, 131073, 2, 458751, 131073, 2, 393215, 131073, 2, 327679, 131073, 2, 262143, 131073, 2, 196607, 131073, 2, 131071, 131073, 2, 65535, 131073, 2, 37, 131073, 2, 36, 131073, 2, 35, 131073, 2, 34, 131073, 2, 33, 131073, 2, 32, 131073, 2, 31, 131073, 2, 30, 131073, 2, 29, 131073, 2, 28, 131073, 2, 27, 131073, 2, 26, 131073, 2, 25, 131073, 2, 24, 131073, 2, 23, 131073, 2, 22, 131073, 2, 21, 131073, 2, 20, 131073, 2, 19, 131073, 2, 18, 131073, 2, 65553, 131073, 2, 17, 131073, 2, 65552, 131073, 2, 16, 131073, 2, 65551, 131073, 2, 15, 131073, 2, 65550, 131073, 2, 14, 131073, 2, 65549, 131073, 2, 13, 131073, 2, 65548, 131073, 2, 12, 131073, 2, 65547, 131073, 2, 11, 131073, 2, 65546, 131073, 2, 10, 131073, 2, 65545, 131073, 2, 9, 131073, 2, 65544, 131073, 2, 8, 131073, 2, 65543, 131073, 2, 7, 131073, 2, 65542, 131073, 2, 6, 131073, 2, 65541, 131073, 2, 5, 131073, 2, 65540, 131073, 2, 4, 131073, 2, 65539, 131073, 2, 3, 131073, 2, 65538, 131073, 2, 2, 131073, 2, 1769471, 131073, 2, 1703936, 131073, 2, 1703937, 131073, 2, 1703938, 131073, 2, 1703939, 131073, 2, 1703940, 131073, 2, 1703941, 131073, 2, 1703943, 131073, 2, 1703942, 131073, 2, 1703944, 131073, 2, 1703945, 131073, 2, 1703946, 131073, 2, 1703947, 131073, 2, 1703948, 131073, 2, 1703949, 131073, 2, 1703950, 131073, 2, 1703951, 131073, 2, 1703960, 131073, 2, 1703961, 131073, 2, 1703962, 131073, 2, 1703963, 131073, 2, 1703964, 131073, 2, 1703965, 131073, 2, 1703966, 131073, 2, 1703967, 131073, 2, 1703968, 131073, 2, 1703969, 131073, 2, 1703959, 131073, 2, 1703958, 131073, 2, 1703957, 131073, 2, 1703956, 131073, 2, 1703955, 131073, 2, 1703954, 131073, 2, 1703953, 131073, 2, 1703952, 131073, 2, 1703970, 131073, 2, 1703971, 131073, 2, 1703973, 131073, 2, 1703972, 131073, 2, 1703974, 131073, 2)
layer_1/name = "Decor"
layer_1/tile_data = PackedInt32Array(655364, 131074, 3, 720900, 131074, 4, 655365, 196610, 3, 720901, 196610, 4, 655368, 131074, 3, 720904, 131074, 4, 655369, 196610, 3, 720905, 196610, 4, 655373, 131074, 3, 720909, 131074, 4, 655374, 196610, 3, 720910, 196610, 4)
layer_2/name = "Background"
layer_2/tile_data = PackedInt32Array()

[node name="Door" parent="." instance=ExtResource("2_cgdok")]
position = Vector2(480, 392)

[node name="PlayerSpawner" type="Marker2D" parent="."]
position = Vector2(168, 152)
script = ExtResource("4_3al1s")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
script = ExtResource("4_s8qrv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(368, 744)
shape = SubResource("RectangleShape2D_yue0q")

[node name="Key" parent="." instance=ExtResource("6_mj6gc")]
position = Vector2(352, 280)
gravity_scale = 0.0
lock_rotation = true

[node name="KeySpawn" type="Marker2D" parent="."]
position = Vector2(352, 280)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
